Update display bug on iOS devices

--- a/src/style.css
+++ b/src/style.css
@@ -9,11 +9,16 @@
   padding: 0;
 }
 
+html {
+  min-height: -webkit-fill-available;
+}
+
 body {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
+  max-height: -webkit-fill-available;
   width: 100vw;
   margin: 0;
   font-family: 'Roboto', sans-serif;
